# rusty-book-manager

./: Cargo.toml  Makefile.toml  compose.yaml
adapter/migrations/: 20240309170404_start.down.sql  20240309170404_start.up.sql
adapter/src/database/: mod.rs
adapter/src/database/model/: book.rs  user.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/repository/fixtures/: book.sql
api/src/: extractor.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  user.rs
api/src/model/: auth.rs  book.rs  checkout.rs  user.rs
api/src/route/: mod.rs  user.rs  v1.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
kernel/src/model/: id.rs  mod.rs
kernel/src/model/user/: mod.rs
kernel/src/repository/: checkout.rs  mod.rs  user.rs
registry/src/: lib.rs
src/: main.rs
